--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -28,3 +28,8 @@ production:
   twilio_auth_token: <%= ENV["TWILIO_AUTH_TOKEN"] %>
   sendgrid_username: <%= ENV["SENDGRID_USERNAME"] %>
   sendgrid_password: <%= ENV["SENDGRID_PASSWORD"] %>
+  odh_db_host: <%= ENV['ODH_DB_HOST'] %>
+  odh_db_port: <%= ENV['ODH_DB_PORT'] %>
+  odh_db_db: <%= ENV['ODH_DB_DB'] %>
+  odh_db_user: <%= ENV['ODH_DB_USER'] %>
+  odh_db_pass: <%= ENV['ODH_DB_PASS'] %>
