--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,7 +4,7 @@ upstream unicorn {
 
 server {
   listen 80 default deferred;
-  server_name 104.154.78.68;
+  server_name proto.marmar.is;
 
   root /home/marmaris/apps/odh/current/public;
 
