--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,5 +1,5 @@
 upstream unicorn {
-  server unix:///home/marmaris/apps/odh/shared/sockets/unicorn.odh.sock fail_timeout=0;
+  server unix:///home/marmaris/apps/odh/shared/sockets/unicorn.ODH.sock fail_timeout=0;
 }
 
 server {
