--- a/test/fixtures/ambassadors.yml
+++ b/test/fixtures/ambassadors.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  token: MyString
-  role: 1
+#one:
+#  token: MyString
+#  role: 1
 
-two:
-  token: MyString
-  role: 1
+#two:
+#  token: MyString
+#  role: 1
